--- a/Projects/index.html
+++ b/Projects/index.html
@@ -196,24 +196,56 @@
             <h2>Projects</h2>
 
   <blockquote>
-<p>Open Source</p>
+<p>Golang</p>
 </blockquote>
 <ul>
 <li><p><a target="_blank" rel="noopener" href="https://github.com/mhchlib/mconfig">mconfig</a><br>一个简单的分布式配置中心</p>
 </li>
-<li><p><a target="_blank" rel="noopener" href="https://github.com/ChenHaoHu/webtable">webtable</a><br>一键从数据库模型直接构建一套完整的数据管理平台</p>
-</li>
 <li><p><a target="_blank" rel="noopener" href="https://github.com/ChenHaoHu/gowschat">gowschat</a><br>go编写的聊天室</p>
 </li>
-<li><p><a target="_blank" rel="noopener" href="https://github.com/ChenHaoHu/weform">weform</a><br>汇表单应用后端，表单收集，数据分析工具</p>
+<li><p><a target="_blank" rel="noopener" href="https://github.com/ChenHaoHu/ExpressionParser">ExpressionParser</a><br>go编写的简单表达式计算引擎 支持基本运算符，支持简单的集合运算</p>
 </li>
 </ul>
 <blockquote>
-<p>Experiment</p>
+<p>Java</p>
 </blockquote>
+<ul>
+<li><p><a target="_blank" rel="noopener" href="https://github.com/ChenHaoHu/webtable">webtable</a><br>一键从数据库模型直接构建一套完整的数据管理平台</p>
+</li>
+<li><p><a target="_blank" rel="noopener" href="https://github.com/ChenHaoHu/weform">weform</a><br>汇表单应用后端，表单收集，数据分析工具</p>
+</li>
+<li><p><a target="_blank" rel="noopener" href="https://github.com/ChenHaoHu/SimpleHttpServer">SimpleHttpServer</a><br>一个简单的java servlet引擎，支持简单javase应用</p>
+</li>
+</ul>
 <blockquote>
-<p>Study</p>
+<p>Web</p>
 </blockquote>
+<ul>
+<li><a target="_blank" rel="noopener" href="https://github.com/ChenHaoHu/webtable-admin">webtable-admin</a><br>一键从数据库模型直接构建一套完整的数据管理平台前端</li>
+</ul>
+<blockquote>
+<p>Lua</p>
+</blockquote>
+<ul>
+<li><a target="_blank" rel="noopener" href="https://github.com/ChenHaoHu/domain-gateway">domain-gateway</a><br>根据域名映射内网的网关小工具，simple tool but not good, u can use ingress with traefik or nginx</li>
+</ul>
+<blockquote>
+<p>C#</p>
+</blockquote>
+<ul>
+<li><p><a href="">管道能耗计算</a><br>非开源</p>
+</li>
+<li><p><a href="">haozop能耗分析工具</a><br>非开源</p>
+</li>
+</ul>
+<blockquote>
+<p>MORE….</p>
+</blockquote>
+<p>you can find more in </p>
+<ul>
+<li><a target="_blank" rel="noopener" href="https://github.com/ChenHaoHu">Person github</a> </li>
+<li><a target="_blank" rel="noopener" href="https://github.com/mhchlib">QMS github</a></li>
+</ul>
 
 
           <div class="row mt-2">
