--- a/Works/index.html
+++ b/Works/index.html
@@ -195,7 +195,14 @@
         <div class="trans">
             <h2>Works</h2>
 
-  <p>Worked as a development engineer in <a target="_blank" rel="noopener" href="https://www.qianxin.com/">QAX</a></p>
+  <blockquote>
+<p>工作</p>
+</blockquote>
+<p>目前在奇安信集团工作，任研发工程师，主要业务方向为安全管控类，研究方向微服务，Golang，高可用，基础架构。</p>
+<blockquote>
+<p>内推机会</p>
+</blockquote>
+<p>邮件私信我</p>
 
 
           <div class="row mt-2">
